Fix contrast when emphasized

--- a/src/components/side_nav/_side_nav_item.scss
+++ b/src/components/side_nav/_side_nav_item.scss
@@ -4,6 +4,8 @@
  * 3. Enable ellipsis overflow to work (https://css-tricks.com/flexbox-truncated-text/)
  * 4. Restrict the underline to the button __label so it doesn't affect other components that might live within
  */
+
+
 .euiSideNavItemButton {
   @include euiFontSizeS;
   text-align: left; /* 1 */
@@ -27,7 +29,7 @@
   }
 
   &.euiSideNavItemButton-isSelected {
-    color: $euiColorPrimary;
+    color: $euiSideNavSelectedTextcolor;
     font-weight: $euiFontWeightBold;
 
     .euiSideNavItemButton__label {
@@ -98,7 +100,7 @@
 }
 
 .euiSideNavItem--trunk {
-  color: $euiTitleColor; /* 2 */
+  color: $euiSideNavRootTextcolor; /* 2 */
 
   /**
    * 1. Create padding around focus area without indenting the item itself.
@@ -121,7 +123,7 @@
   * 1. Draw the vertical line to group an expanded item's child items together.
   */
   position: relative;
-  color: $euiTextSubduedColor; /* 2 */
+  color: $euiSideNavBranchTextcolor; /* 2 */
 
   &::after { /* 1 */
     position: absolute;
@@ -163,13 +165,10 @@
 }
 
 .euiSideNavItem--emphasized {
-  background: $euiColorLightestShade;
-  color: $euiTitleColor;
-
-  &:not(.euiSideNavItem--root) {
-    // For non-root sections we need to accomodate for the indent
-    box-shadow: -$euiSizeS 0 0 0 $euiColorLightestShade;
-  }
+  background: $euiSideNavEmphasizedBackgroundColor;
+  color: $euiSideNavRootTextcolor;
+  // The large y values allow the shadow to stretch beyond the side nav bounds to it's parents container
+  box-shadow: 100px 0 0 0 $euiSideNavEmphasizedBackgroundColor, -100px 0 0 0 $euiSideNavEmphasizedBackgroundColor;
 
   > .euiSideNavItemButton {
     font-weight: $euiFontWeightBold;
